--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: Computer Vision
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/aweekj/kiko-now/master/images/jekyll-logo.png
+avatar: https://www.flickr.com/photos/110585215@N05/29444894664/
 
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
