--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: Computer Vision
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.flickr.com/photos/110585215@N05/29444894664/
+avatar: https://raw.githubusercontent.com/aweekj/kiko-now/master/images/jekyll-logo.png
 
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
@@ -49,11 +49,11 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   tumblr: # https://<username>.tumblr.com
-  twitter: jekyllrb
-  youtube: # channel/<your_long_string> or user/<user-name>
+  twitter: 
+  youtube: https://www.youtube.com/channel/UC0qHZSRXqTq7fSdkBkOmfuw # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in footer
-footer-text: © 2017 Kiko Now
+footer-text: huytranvan2010
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
