--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: Computer Vision
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/huytranvan2010/huytranvan2010.github.io/blob/main/images/myavatar.jpg
+avatar: "images/myavatar.jpg"
 
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
