--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: Computer Vision
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/aweekj/huytranvan2010.github.io/master/images/myavatar.jpg
+avatar: https://raw.githubusercontent.com/aweekj/huytranvan2010.github.io/master/images/myavatar.png
 
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
