--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ description: Computer Vision
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/67550140?v=4?s=400
 
+# vafp github chọn source tìm chữ avatar lấy avatar#
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
