--- a/_config.yml
+++ b/_config.yml
@@ -45,13 +45,13 @@ footer-links:
   github: huytranvan2010
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
-  linkedin:
+  linkedin: Huy Tran Van
   pinterest:
   rss: # just type anything here for a working RSS icon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   tumblr: # https://<username>.tumblr.com
   twitter: 
-  youtube: huytranvan2010 # channel/<your_long_string> or user/<user-name>
+  youtube: channel/huytranvan2010 # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in footer
 footer-text: © huytranvan2010
