--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ footer-links:
   github: huytranvan2010
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
-  linkedin: https://www.linkedin.com/in/huy-tran-van-5a1999203/
+  linkedin: huy-tran-van-5a1999203
   pinterest:
   rss: # just type anything here for a working RSS icon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
