--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tran Van Huy
 
 # Short bio or description (displayed in the header)
-description: Computer Vision
+description: Artificial Intellegence
 
 #
 # Flags below are optional
